# includes/api.php
@@ -26,13 +26,15 @@ function crawlerx_create_post($request)
         return new WP_Error('missing_excerpt', 'O resumo é obrigatório.', ['status' => 400]);
     }
 
+    $user_id = isset($request['user_id']) ? intval($request['user_id']) : 2;
+
     $post_id = wp_insert_post([
         'post_title'   => $title,
         'post_content' => $content,
         'post_excerpt' => $excerpt,
         'post_status'  => 'publish',
         'post_type'    => 'post',
-        'post_author'  => 2
+        'post_author'  => $user_id
     ]);
 
     wp_set_post_categories($post_id, [102]);
@@ -45,7 +47,7 @@ function crawlerx_create_post($request)
     ]);
 }
 
-// Upload de imagem via URL e definir como imagem destacada
+// Upload image and set as featured image
 function crawlerx_upload_image($request)
 {
     $validation = crawlerx_validate_api_key($request);
@@ -54,20 +56,21 @@ function crawlerx_upload_image($request)
     $post_id = intval($request['post_id']);
     $image_base64 = $request['image_base64'];
     $title = $request['title'];
+    $cover_image_url = isset($request['cover_image_url']) ? $request['cover_image_url'] : null;
 
     if (!get_post($post_id)) {
-        return new WP_Error('invalid_post', 'Post ID inválido.', ['status' => 400]);
+        return new WP_Error('invalid_post', 'Invalid Post ID.', ['status' => 400]);
     }
 
     if (empty($image_base64) || empty($title)) {
-        return new WP_Error('invalid_params', 'Imagem base64 ou título não fornecidos.', ['status' => 400]);
+        return new WP_Error('invalid_params', 'Base64 image or title not provided.', ['status' => 400]);
     }
 
-    // Decodifica a imagem base64
+    // Decode base64 image
     $image_data = base64_decode(preg_replace('#^data:image/\w+;base64,#i', '', $image_base64));
 
     if (!$image_data) {
-        return new WP_Error('invalid_base64', 'Dados base64 inválidos.', ['status' => 400]);
+        return new WP_Error('invalid_base64', 'Invalid base64 data.', ['status' => 400]);
     }
 
     require_once ABSPATH . 'wp-admin/includes/file.php';
@@ -88,10 +91,10 @@ function crawlerx_upload_image($request)
     $attachment_id = media_handle_sideload($attachment, $post_id);
 
     if (is_wp_error($attachment_id)) {
-        return new WP_Error('upload_failed', 'Falha ao processar a imagem.', ['status' => 500]);
+        return new WP_Error('upload_failed', 'Failed to process image.', ['status' => 500]);
     }
 
-    // Atualiza o caption da imagem com o título original
+    // Update image caption with original title
     wp_update_post([
         'ID' => $attachment_id,
         'post_excerpt' => $title
@@ -99,7 +102,16 @@ function crawlerx_upload_image($request)
 
     set_post_thumbnail($post_id, $attachment_id);
 
-    $image_url = wp_get_attachment_url($attachment_id);
+    // Se a URL da imagem de capa for fornecida, processe a marca d'água
+    if (!empty($cover_image_url)) {
+        $new_attachment_id = process_image_watermark($attachment_id, $cover_image_url);
+        
+        // Obtenha a URL da nova imagem com a máscara
+        $image_url = wp_get_attachment_url($new_attachment_id);
+    } else {
+        // Caso contrário, obtenha a URL normal
+        $image_url = wp_get_attachment_url($attachment_id);
+    }
 
     return rest_ensure_response([
         'wp_image_id' => $attachment_id,
